# spbpu_sdt_homeworks

./: .gitignore  Makefile  pyproject.toml
homeworks/: How-To-Use-Jupyter-Python1st&2ndDay.ipynb  Python-TheBeginningHomework.ipynb  python101-Thebeginning.ipynb
homeworks/02/: Homework2-YuryBarodzich.ipynb
homeworks/03/: Homework3-YuryBarodzich.ipynb
homeworks/04/: Homework4-YuryBarodzich.ipynb
homeworks/05/: Homework5-YuryBarodzich.ipynb  rates_df.csv
homeworks/06/: Homework6-YuryBarodzich.ipynb  homework_text.txt
homeworks/07/: HOMEWORK7.ipynb  HOMEWORK7_YB.ipynb  HW7. Vasilii Ermakov.ipynb  Homework7-YuryBarodzich.ipynb
homeworks/08/: HOMEWORK8.ipynb
homeworks/09/: FaceDetection.ipynb  FaceRecognitionWebCamStep2.ipynb  Homework9-YuryBarodzich.ipynb
homeworks/12/: Avocado.ipynb  FinalHW.csv  ProjectWeek12.ipynb
