[tool.poetry]
name = "homeworks"
version = "0.1.0"
description = "software_development_technologies"
authors = ["Yury Borodich <xkxixnxgx@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "3.6.1"
seaborn = "0.12.0"
requests = "2.28.1"
opencv-python = "4.5.5.64"
scikit-learn = "1.2.0"
tensorflow = "2.11.0"
opencv-contrib-python = "^4.6.0.66"
xgboost = "1.7.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
